--- a/sites/all/themes/ewo/assets/css/screen.css
+++ b/sites/all/themes/ewo/assets/css/screen.css
@@ -173,10 +173,6 @@ h3 {
   background-position: 14px 12px;
   background-size: 20px; }
 
-.icon-icons_popular {
-  background-position: 8px 6px;
-  background-size: 13px; }
-
 .white-btn {
   border: 1px solid #fff;
   color: #fff; }
@@ -190,6 +186,11 @@ h3 {
   display: block;
   height: 24px;
   width: 24px; }
+
+.icon-icons_popular {
+  background-position: 0 6px;
+  background-size: 13px;
+  width: 18px; }
 
 .back-link {
   margin: 40px 0; }
